--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p class="my-location">Hampton, NJ</p>
             </div>
         </section>
-        <section class="about-me">
+        <section id="about-me" class="about-me">
             <div class="content">
                 <div class="about-content">
                     <p class="iama">I want to be...</p>
@@ -73,7 +73,7 @@
             <a href="#">Back to Top</a>
         </div>
         <hr>
-        <section>
+        <section id="pictures" class="gallery">
             <figure>
                 <picture>
                     <source media="(min-width: 1024px)" srcset="images/itty1-lrg.jpg">
@@ -104,7 +104,7 @@
                 <figcaption>Itty on my lap.</figcaption>
             </figure>
         </section>
-        <div class="back-to-top">
+        <div id="story" class="back-to-top">
             <a href="#">Back to Top</a>
         </div>
         <hr>
@@ -149,7 +149,7 @@
         <a href="#">Back to Top</a>
     </div>
     <hr>
-    <section class="form-container">
+    <section id="contact" class="form-container">
         <h1>Get in Touch</h1>
         <form class="contact" method="POST" action="https://formspree.io/graham@wandless.net">
             <fieldset class="form-box">
